--- a/Plots.html
+++ b/Plots.html
@@ -31,7 +31,7 @@
 </head>
   
 <body>
-  <h1 align="center">Superposition of two states in a 1-D Infinite Potential Well</h1>
+  <h1 align="center">Superposition of Two States in a 1-D Infinite Potential Well</h1>
   <h2>The Plots:</h2>
     <div class="images">
         <div class="photo">
