--- a/Plots.html
+++ b/Plots.html
@@ -2,7 +2,7 @@
 <html>
   
 <head>
-  <title>Superposition states in a 1-D Infinite Potential Well</title>
+  <title>Superposition States in a 1-D Infinite Potential Well</title>
   <style>
     figcaption {
       text-align: center;
