--- a/Plots.html
+++ b/Plots.html
@@ -3,6 +3,7 @@
   
 <head>
   <title>Superposition States in a 1-D Infinite Potential Well</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     figcaption {
       text-align: center;
